generate products shared-ui order library

--- a/nx.json
+++ b/nx.json
@@ -53,6 +53,10 @@
     },
     "@nx/angular:component": {
       "style": "css"
+    },
+    "@nx/angular:library": {
+      "linter": "eslint",
+      "unitTestRunner": "jest"
     }
   },
   "defaultProject": "nx-learning"
