--- a/modules/products/project.json
+++ b/modules/products/project.json
@@ -4,7 +4,7 @@
   "sourceRoot": "modules/products/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:feature", "scope:orders"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
